Make wrapper and update manager support both 4.x and 5.x, native and generic